Atualização: Adição do Header eu amo rato e adição do H1 Bem vindo ao Atlas.

--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
     <script>
     </script>
+    <header> eu amo rato </header>
 </head>
 <body>
-	<br />
-    This is a template for Monaca app.
+	<h1> Bem vindo ao Atlas </h1>
 </body>
 </html>
